TestCases/LLVMTests/SyntaxErrorTests/tests/test50.c
int main(){
    int x;
    x = 5 + 'a';
    x = 5 - 'a';
    x = 5 * 'a';
    x = 5 / 'a';
    return 0;
}
